--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -122,6 +122,17 @@
 </body>
 </html>
 <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-70116787-3', 'auto');
+    ga('send', 'pageview');
+    ga('set', 'userId', '140507308'); // 使用已登录的 user_id 来设置用户 ID。
+
+</script>
+<script>
     if (!fetch) {
         alert('not support fetch API!')
     }
