说说过滤了content关键字，但是为啥还是会取到summary……

--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -267,6 +267,7 @@
     let renderContent = function (res) {
         let st = '';
         res.forEach(function (v, i) {
+            if (!v.content) return;
             let im = '';
             v.images.forEach(function (iv) {
                 im += `<img src="${iv}">`
