blog渲染好了，但是好丑～～不开森😫

--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -13,7 +13,7 @@
 <body style="padding: 30px;">
 <div class="ui attached stackable menu tabular" style="margin-bottom: 20px;">
     <div class="ui container">
-        <a class="item">
+        <a class="item" href="/post">
             <i class="home icon"></i> Blog
         </a>
         <a class="item">
