基本完工了，还差tags的过滤和展示页面

--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -133,7 +133,7 @@
 
     ga('create', 'UA-70116787-3', 'auto');
     ga('send', 'pageview');
-//    ga('set', 'userId', '140507308'); // 使用已登录的 user_id 来设置用户 ID。
+    ga('set', 'userId', '140507308'); // 使用已登录的 user_id 来设置用户 ID。
 
 </script>
 <script>
