--- a/public/html/postIndex.html
+++ b/public/html/postIndex.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>post index</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Post Index</title>
+    <script src="../lib/jquery-3.1.1.js"></script>
+    <script src="../lib/moment-2.17.1.js"></script>
+    <script src="../lib/semantic/dist/semantic.min.js"></script>
+    <link rel="stylesheet" href="../lib/semantic/dist/semantic.min.css">
 </head>
-<body>
-
+<body style="padding: 30px;">
+    <div class="ui attached stackable menu tabular" style="margin-bottom: 20px;">
+        <div class="ui container">
+            <a class="item" href="/post">
+                <i class="home icon active"></i> Blog
+            </a>
+            <a class="item" href="/shuoshuo">
+                <i class="grid layout icon"></i> ShuoShuo
+            </a>
+            <a class="item">
+                <i class="mail icon"></i> About
+            </a>
+            <div class="ui simple dropdown item">
+                More
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                    <a class="item"><i class="edit icon"></i> Edit Profile</a>
+                    <a class="item"><i class="globe icon"></i> Choose Language</a>
+                    <a class="item"><i class="settings icon"></i> Account Settings</a>
+                </div>
+            </div>
+            <div class="right item">
+                <div class="ui input"><input type="text" placeholder="Search..."></div>
+            </div>
+        </div>
+    </div>
+    <div class="ui grid">
+        <div class="two column row">
+            <div class="four wide computer five wide tablet sixteen wide mobile column">
+                <section class="ui segment">
+                    <h2>Tags</h2>
+                    <div id="summary" class="menu ui vertical" style="width: auto">
+                    </div>
+                </section>
+            </div>
+            <div class="twelve wide computer eleven wide tablet sixteen wide mobile column">
+                <article class="posts ui segment">
+                </article>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+<script>
+    $(function () {
+        $.post('/getPostsAbstract', {limit: 10}, function (abstracts) {
+            let st = '';
+            abstracts.forEach(v => {
+                st += v.abstract;
+                st += `<p><a href="/post/${v.escapeName}">继续阅读</a></p>`;
+            });
+            $('article').html(st);
+        })
+    })
+</script>
