tags的渲染搞定了。但是文章的渲染还是会串，我都写成同步的了……（不过还是因为tag的原因，必须要写成同步的）

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,7 +15,7 @@
         <a href="./shuoshuo">shuoshuo</a>
     </li>
     <li>
-        <a href="./blog">blog</a>
+        <a href="./post">blog</a>
     </li>
 </ul>
 </body>
