--- a/public/html/postIndex.html
+++ b/public/html/postIndex.html
@@ -9,6 +9,7 @@
     <script src="../lib/moment-2.17.1.js"></script>
     <script src="../lib/semantic/dist/semantic.min.js"></script>
     <link rel="stylesheet" href="../lib/semantic/dist/semantic.min.css">
+    <link rel="stylesheet" href="../lib/markdown.css">
 </head>
 <body style="padding: 30px;">
     <div class="ui attached stackable menu tabular" style="margin-bottom: 20px;">
@@ -36,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="ui grid">
+    <div class="ui container grid">
         <div class="two column row">
             <div class="four wide computer five wide tablet sixteen wide mobile column">
                 <section class="ui segment">
