--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -433,6 +433,7 @@
 
             $.ajax({
                 url:'/getUser',
+                method: 'post',
                 data: user,
             }).then(function (d) {
                 callback (d)
