修改了一点小bug

--- a/public/html/postIndex.html
+++ b/public/html/postIndex.html
@@ -88,7 +88,7 @@
                 $('article').html(st);
             });
 
-//            $.post('/postSingleTag', function (tags) {
+//            $.post('/getTagPosts', function (tags) {
 //                Object.keys(data).sort((a, b) => a < b).forEach(v => {
 //                    let a = document.createElement('a');
 //                    a.dataset.year = v;
