--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -127,6 +127,8 @@
 
 </body>
 </html>
+<script src="../lib/js/imageCompressAndUpload.js"></script>
+<script src="../lib/js/shuoshuo.js"></script>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -143,410 +145,6 @@
     ga('create', 'UA-70116787-3', 'auto');
     ga('send', 'pageview');
     ga('set', 'userId', '140507308'); // 使用已登录的 user_id 来设置用户 ID。
-
-</script>
-<script>
-    let readableSize = function (size) {
-        return size / 1024 > 1024 ? (~~(10 * size / 1024 / 1024)) / 10 + "MB" : ~~(size / 1024) + "KB"
-    };
-    let progress = document.querySelector('#progress');
-    let imgFormData = new FormData();
-    $('#photo').change(function (e) {
-
-        [].forEach.call(e.target.files, function (file) {
-            let cardDiv = document.createElement('div');
-            let imgDiv = document.createElement('div');
-            cardDiv.classList.add('card');
-            imgDiv.classList.add('image');
-            let imgFrame = document.querySelector('#frame');
-            let img = new Image();
-            imgDiv.appendChild(img);
-            cardDiv.appendChild(imgDiv);
-            imgFrame.appendChild(cardDiv);
-            let reader = new FileReader();
-            reader.onloadend = function () {
-                img.src = this.result;
-                console.log(img.width);
-                console.log(img.height);
-                img.onload = function () {
-                    imgFormData.append('photo', compressImg(img, file.type, cardDiv), file.name);
-//                    let xhr = new XMLHttpRequest(), percent = 0, loop = null;
-//
-//                    xhr.open("POST", "/file");
-//
-//                    xhr.onreadystatechange = function () {
-//                        if (xhr.readyState === 4) {
-//                            if (xhr.status === 200) {
-//                                let d = JSON.parse(xhr.responseText);
-//                                console.info(d);
-//                                document.querySelector('#after').innerHTML = '图片压缩后的大小(从服务器获取到的数据)：' + readableSize(d[0].size);
-//                            } else {
-//                                console.error(xhr.responseText)
-//                            }
-//                        }
-//                    };
-//                    xhr.upload.addEventListener('progress', function(e) {
-//                        if (loop) return;
-//                        percent = ~~(100 * e.loaded / e.total);
-//                        progress.value = percent;
-//                        console.log(percent);
-//                    }, false);
-//                    xhr.send(imgFormData);
-                }
-            };
-            reader.readAsDataURL(file);
-        });
-    });
-
-    let compressImg = function (img, type, card) {
-        /**
-         * compress base64 img data to blob
-         * @param img: instanceof Image
-         * @param type: mimetype of img
-         * @returns: img Blob data
-         * */
-        const maxsize = 100 * 1024;
-        let imgBase64 = img.src;
-        let contentDiv = document.createElement('div');
-        let contentHeaderDiv = document.createElement('div');
-        contentDiv.classList.add('content');
-        contentHeaderDiv.classList.add('header');
-
-        contentDiv.appendChild(contentHeaderDiv);
-        card.appendChild(contentDiv);
-        if (imgBase64.length > maxsize) {
-
-            let canvas = document.createElement("canvas");
-            let ctx = canvas.getContext('2d');
-
-            let initSize = img.src.length;
-            let width = img.width * 10;
-            let height = img.height * 10;
-            let ratio = width * height / 4000000;
-            if (ratio > 1) {
-                ratio = Math.sqrt(ratio);
-                width /= ratio;
-                height /= ratio;
-            }
-            canvas.width = width;
-            canvas.height = height;
-            // 如果是jpeg 就添加底色为白色，因为jpeg默认会把透明部分转为黑色, 而默认的toDataURL会把图片转为PNG格式
-            if (type === 'image/jpeg') {
-                ctx.fillStyle = "#fff";
-            }
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-            // 修改图片大小
-            ctx.drawImage(img, 0, 0, width, height);
-            // 修改图片质量
-            imgBase64 = canvas.toDataURL(type);
-
-            contentHeaderDiv.innerHTML = readableSize(initSize) + ' / ' + readableSize(imgBase64.length);
-
-            console.log('压缩前：' + initSize);
-            console.log('压缩后：' + imgBase64.length);
-
-            console.log('压缩率：' + ~~(100 * (initSize - imgBase64.length) / initSize) + "%");
-            canvas.width = canvas.height = 0;
-        } else {
-            contentHeaderDiv.innerHTML = readableSize(img.src.length) + ' / ' + readableSize(img.src.length);
-        }
-
-        let text = window.atob(imgBase64.split(",")[1]);
-        let buffer = new Uint8Array(text.length);
-        for (let i = 0; i < text.length; i++) {
-            buffer[i] = text.charCodeAt(i);
-        }
-        return new Blob([buffer], {type});
-    };
-</script>
-<script>
-    $('.ui.checkbox').checkbox();
-    let timeMark = 0;
-    let weatherInfo = {};
-    let filter = 'all';
-
-    let renderContent = function (res) {
-        let st = '';
-        if (!res.length) {
-            return `<p>还没有说说呢，写一条呗～～</p>`
-        }
-        res.forEach(function (v, i) {
-            let im = '';
-            v.images.forEach(function (iv) {
-                im += `<img src="${iv}">`
-            });
-            st += `<div class="item">
-                            <div class="content">
-                                <h3 class="header"><time>${v.dateStr}</time></h3>
-                                <div class="description">
-                                    <p>${v.content}</p>
-                                    <p><i class="icon location arrow"></i>${v.weather.location || v.location}: <img class="aligned image mini spaced ui" src="../assert/weather-icon/${v.weather.code[0]}.png"> ~ <img class="aligned image mini spaced ui" src="../assert/weather-icon/${v.weather.code[1]}.png"> ${v.weather.temperature[0]}&#8451; ~ ${v.weather.temperature[1]}&#8451; </p>
-                                     <div class="images ui small">${im}</div>
-
-                                </div>
-                                ${v.isPublic ? '' : '<div class="extra"><div class="ui label red">Private</div> </div>'}
-                            </div>
-                        </div>`;
-            if (i === res.length - 1) {
-                timeMark = v.date;
-            }
-        });
-        return st;
-    };
-
-    let getSummary = function () {
-        let summary = document.querySelector('#summary');
-        summary.innerHTML = '';
-        fetch('/getSummary', {method: "POST"}).then(function (d) {
-            if (d.ok) {
-                d.json().then(function (s) {
-                    let data = s[0].summary;
-                    Object.keys(data).sort((a, b) => a < b).forEach(v => {
-                        let a = document.createElement('a');
-//                        a.onclick = loadList(arg);
-                        a.dataset.year = v;
-                        a.classList = 'teal item';
-                        if (v === filter) {
-                            a.classList.add('active');
-                        }
-                        a.innerHTML = `${v} <div class="ui teal label">${data[v]}</div>`;
-                        summary.appendChild(a);
-                    });
-                })
-            }
-        }, function (e) {
-            console.log(e)
-        })
-    };
-
-    let getInitList = function () {
-        timeMark = 0;
-        $.ajax({
-            url: '/getShuoshuoList',
-            method: 'POST',
-            data: {limit: 20, filter, timeMark}
-        }).done(function (res) {
-            let template = renderContent(res);
-            if (res.length < 20) {
-                $('#loadMore').hide();
-            } else {
-                $('#loadMore').show();
-            }
-            $('#shuoshuo-ul').html(template);
-            getSummary();
-        }).fail(function (jqxhr) {
-            $('#shuoshuo-ul').html(`<p>${jqxhr.status}: ${jqxhr.responseText}</p>`)
-        });
-    };
-
-    let getWeather = function () {
-        $.ajax({
-            method: 'POST',
-            url: '/getWeather'
-        }).done(function (d) {
-            weatherInfo = d;
-            $('#weather').html(`<div class="ui info message"><i class="icon location arrow"></i>${d.location}: <img class="aligned image mini spaced ui" src="../assert/weather-icon/${d.code_day}.png"> ~ <img class="aligned image mini spaced ui" src="../assert/weather-icon/${d.code_night}.png">${d.code_day === d.code_night ? d.text_day : d.text_day + ' 转 ' + d.text_night} ${d.low}&#8451; ~ ${d.high}&#8451; <small>timestamp: ${moment(d.queryTime).format('YYYY-MM-DD HH:mm:ss')}</small></div>`);
-        }).fail(function (e) {
-            let err = JSON.parse(e.responseText);
-            $('#weather').html(`<div class="ui error message"><p>err: ${err.name}:</p><p>message: ${err.message}</p></div>`);
-        });
-    };
-
-    let loadList = function (mark) {
-        $.ajax({
-            url: '/getShuoshuoList',
-            method: 'POST',
-            data: {
-                filter,
-                timeMark
-            }
-        }).done(function (res) {
-            if (!res.length) {
-                alert('就这么多啦～～');
-                $('#loadMore').hide();
-            } else {
-                if (res.length < 10) {
-                    $('#loadMore').hide();
-                } else {
-                    $('#loadMore').show();
-                }
-                let template = renderContent(res);
-                if (mark === 'more') {
-                    $('#shuoshuo-ul').append(template);
-                } else {
-                    $('#shuoshuo-ul').html(template);
-                }
-            }
-
-        }).fail(function (xhr) {
-            $('#shuoshuo-ul').append(`<p>${xhr.status}: ${xhr.responseText}</p>`);
-        })
-    };
-
-    let postShuoshuo = function () {
-        if ($('#s_content').val().trim()) {
-            if (moment().format('YYYY-MM-DD') !== weatherInfo.date) {
-                getWeather();
-            }
-            let s = {
-                content: $('#s_content').val(),
-                weather: {
-                    temperature: [weatherInfo.low, weatherInfo.high],
-                    code: [weatherInfo.code_day, weatherInfo.code_night],
-                    location: weatherInfo.location
-                }
-            };
-            imgFormData.append('obj', JSON.stringify(s));
-
-            $.ajax({
-                url: '/postShuoshuo',
-                method: 'POST',
-                processData: false,
-                contentType: false,
-                data: imgFormData
-            }).done(function (d) {
-                imgFormData = new FormData();
-                if (d.result.ok === 1 && d.result.n === 1) {
-                    alert('post success.');
-                    $('#frame').html('');
-                    $('#s_content').val('');
-                    filter = 'all';
-                    getInitList();
-                } else {
-                    console.log(d)
-                }
-            }).fail(function (e) {
-                $('#shuoshuoOpMsg').html(e.responseText).parent('div').removeClass('hidden');
-            })
-        }
-    };
-
-    let _login = function (user, callback) {
-        // todo: 这个留着测试一下
-//        let form = new FormData();
-//        let data=form.append('json',  JSON.stringify(user));
-        if (user.username && user.password) {
-//            fetch('/getUser', {
-//                method: "POST",
-//                headers: {
-//                    'Content-Type': 'application/json'
-//                },
-//                body: JSON.stringify(user)
-//            }).then(function (d) {
-//                callback(d)
-//            })
-//            $.post('./getUser', user, function (d) {
-//                callback(d)
-//            })
-
-            $.ajax({
-                url: '/getUser',
-                method: 'post',
-                data: user,
-            }).then(function (d) {
-                callback(d)
-            }, function (e) {
-                callback(e)
-            })
-        }
-    };
-
-    $(function () {
-        getInitList();
-        getWeather();
-        $('#summary').click(function (e) {
-            let targetA = '';
-            if (e.target.localName === 'a') {
-                targetA = e.target;
-            } else if (e.target.localName === 'span') {
-                targetA = e.target.parentElement;
-            }
-            targetA.classList.add('active');
-            let as = this.children;
-            for (let i = 0; i < as.length; i++) {
-                if (as[i].localName === 'a') {
-                    if (as[i] !== targetA) {
-                        as[i].classList.remove('active');
-                    }
-                }
-            }
-
-            filter = targetA.dataset.year;
-            timeMark = 0;
-            loadList();
-        });
-        if (document.cookie.indexOf('login=bingo') > -1) {
-            $('#logout').show();
-            $('#login').hide();
-            $('#shuoshuoArea').show();
-        }
-
-    });
-
-
-    $('#s_poster').click(function () {
-        postShuoshuo();
-    });
-
-    $('#login').click(function () {
-        $('.ui.error.message').hide();
-        $('.ui.modal.login').modal('show');
-
-        $('#submitLogin').click(function () {
-            $(this).addClass('loading');
-            let user = {
-                username: $('#username').val().trim(),
-                password: $('#password').val().trim(),
-                rememberMe: $('#rememberMe').prop('checked')
-            };
-            _login(user, function (res) {
-//                if (res.ok) {
-//                    res.text().then(function (text) {
-//                        if (text === 'succeed') {
-//                            $('.ui.modal.login').modal('hide');
-//                            $('#login').hide();
-//                            $('#logout').show();
-//                        }
-//                    })
-//                } else {
-//                    console.log(res.status)
-//                }
-                if (res === 'succeed') {
-                    $(this).removeClass('loading');
-                    $('.ui.modal.login').modal('hide');
-                    $('#login').hide();
-                    $('#shuoshuoArea').show();
-                    $('#shuoshuoOpMsg').html('').parent('div').hide();
-                    $('#logout').show();
-                } else {
-                    $('#submitLogin').removeClass('loading');
-
-//                    $('.ui.modal.login').modal('hide');
-                    $('.ui.error.message').html('Invalid User or Password.').show();
-                    console.log(res)
-                }
-            });
-        });
-    });
-
-    $('#logout').click(function () {
-
-        $('.ui.modal.logout').modal('show');
-
-        $('.logout .positive').click(function () {
-            $.post('/logout', function (d) {
-                if (d === 'succeed') {
-                    $('#login').show();
-                    $('#logout').hide();
-                    $('#shuoshuoArea').hide();
-                } else {
-                    alert('logout filed.')
-                }
-            });
-        })
-
-    })
-
 
 </script>
 
