库都是用了cloudFlare的CDN

--- a/public/html/shuoshuo.html
+++ b/public/html/shuoshuo.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>shuoshuo</title>
-    <script src="../lib/jquery-3.1.1.js"></script>
-    <script src="../lib/moment-2.17.1.js"></script>
-    <script src="../lib/semantic/dist/semantic.min.js"></script>
-    <link rel="stylesheet" href="../lib/semantic/dist/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-calendar/0.0.8/calendar.min.css">
 </head>
 <body style="padding: 30px;">
 <div class="ui attached stackable menu tabular" style="margin-bottom: 20px;">
