想重构一下后端接口，前面的就用VUE全部重写了。一个是用REST API，一个是文件的目录结构有点乱

--- a/public/html/postIndex.html
+++ b/public/html/postIndex.html
@@ -68,7 +68,7 @@
                 $('article').html(st);
             });
 
-            $.post('/getPostAllTags', function (data) {
+            $.get('/getPostAllTags', function (data) {
                 $('#summary').append(`<a data-tag="all" class="teal item">All <div class="ui teal label">${data.length}</div></a>`);
                 data.forEach(v => {
                     let a = document.createElement('a');
