--- a/frontEnd/html/index.html
+++ b/frontEnd/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="../img/favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <meta charset="UTF-8">
     <title>Hello</title>
 </head>
