--- a/frontEnd/html/index.html
+++ b/frontEnd/html/index.html
@@ -12,7 +12,7 @@
 <p>Below is some demo(still in process test):</p>
 <ul>
     <li>
-        <a href="./shuoshuo">shuoshuo</a>
+        <a href="./moments">moments</a>
     </li>
     <li>
         <a href="./post">blog</a>
