--- a/frontEnd/html/file-upload.html
+++ b/frontEnd/html/file-upload.html
@@ -31,7 +31,7 @@
                     console.log(d)
                 });
 //                let xhr = new XMLHttpRequest();
-//                xhr.open('POST', '/postShuoshuo');
+//                xhr.open('POST', '/postMoments');
 //                xhr.onreadystatechange = function (data) {
 //                    console.log(data)
 //                };
