--- a/frontEnd/html/moments.html
+++ b/frontEnd/html/moments.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>shuoshuo</title>
+    <title>moments</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
@@ -94,7 +94,7 @@
         </div>
         <div class="twelve wide computer eleven wide tablet sixteen wide mobile column">
             <article class="ui segment">
-                <div id="shuoshuoArea" style="display: none" class="ui fluid massive icon input">
+                <div id="momentsArea" style="display: none" class="ui fluid massive icon input">
                 <textarea id="s_content"
                           style="padding: 0.5em;border-radius: 4px;border: 1px solid rgba(34, 36, 38, 0.15);overflow-x: hidden;height: 64px;max-width: 100%;max-height: 64px;margin: 0; resize: none;outline: 0;flex: 1 0 auto;line-height: 1em;"
                           placeholder="lalala"> </textarea>
@@ -106,11 +106,11 @@
                 </div>
                 <div class="ui negative message hidden">
                     <i class="close icon"></i>
-                    <div class="header" id="shuoshuoOpMsg"></div>
+                    <div class="header" id="momentsOpMsg"></div>
                 </div>
                 <div class="ui cards four doubling" style="margin: 0;" id="frame"></div>
                 <p id="weather"></p>
-                <ul class="ui divided items" id="shuoshuo-ul">
+                <ul class="ui divided items" id="moments-ul">
 
                 </ul>
                 <p id="loadMore">
@@ -126,7 +126,7 @@
 </body>
 </html>
 <script src="../lib/js/imageCompressAndUpload.js"></script>
-<script src="../lib/js/shuoshuo.js"></script>
+<script src="../lib/js/moments.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
